Fixed mobile nav and footer configuration--Containers need possible alignment adjustment

--- a/XS_stylesheet.css
+++ b/XS_stylesheet.css
@@ -22,11 +22,6 @@ div.header {
 	text-align: left;
 }
 
-#nav_img {
-	margin-right: 01.041666666666666666666666666667%;
-	float: left;
-}
-
 div.header_img_container {
 	background-color: #2E314B;
 	text-align: center;
@@ -43,6 +38,11 @@ div.header_img_container {
 	padding: 0px;
 	margin: 0%;
 	object-fit: contain;
+}
+
+#nav_img {
+	margin-right: 01.041666666666666666666666666667%;
+	float: left;
 }
 
 div.nav .icon {
@@ -220,7 +220,6 @@ td, th {
 
 footer, div.nav {
 	background-color: #000000;
-	height: 64px;
 	width: 100%;
 	padding: 0px;
 	margin: 0px;
@@ -228,11 +227,12 @@ footer, div.nav {
 }
 
 #contact {
+	float: center;
 	padding-top: 4px;
+	padding-bottom: 4px;
 	text-align: center;
 	margin-right: 7.2%;
-	display: inline-block;
-	float: none;
+	display: block;
 }
 
 #contact p {
@@ -247,6 +247,7 @@ footer, div.nav {
 	float: left;
 	padding-left: 10px;
 	padding-top: 4px;
+	padding-bottom: 4px;
 	text-align: center;
 	display: inline-block;
 }
@@ -259,6 +260,9 @@ footer, div.nav {
 	margin: 0%;
 }
 
-@media screen and (max-width: 600px) {
-	div.nav ul li.right, div.nav ul li {float: none;}
+@media screen and (max-width: 767px) {
+	#nav_img {float: none; display: flex; justify-content: center; flex-direction: column;}
+	div.nav ul li.right, div.nav ul li {float: none; margin-left: auto; margin-right: auto;}
+	footer, div.nav {text-align: center; display: block;}
+	#contact, #author {display: block; float:none; flex-direction: column; margin-left: auto; margin-right: auto;}
 }
